@@ -385,14 +385,14 @@ generate(FILE *fh, bool verbose,
 		    "{\n"
 		    "  _kernel_oserror *err;\n"
 		    "\n"  
-		    "  asm volatile (\"MOV	r0, %%[payload];\\n\\t\"\n"
-		    "		\"SWI	%%[resourcefs_registerfiles];\\n\\t\"\n"
-		    "		\"MOVVS	%%[err], r0;\\n\\t\"\n"
-		    "		\"MOVVC	%%[err], #0;\\n\\t\"\n"
-		    "		: [err] \"=r\" (err)\n"
-		    "		: [payload] \"r\" (payload),\n"
-		    "		  [resourcefs_registerfiles] \"i\" (XOS_Bit | ResourceFS_RegisterFiles)\n"
-		    "		: \"r0\", \"r14\", \"cc\");\n"
+		    "  __asm__ volatile (\"MOV	r0, %%[payload];\\n\\t\"\n"
+		    "		    \"SWI	%%[resourcefs_registerfiles];\\n\\t\"\n"
+		    "		    \"MOVVS	%%[err], r0;\\n\\t\"\n"
+		    "		    \"MOVVC	%%[err], #0;\\n\\t\"\n"
+		    "		    : [err] \"=r\" (err)\n"
+		    "		    : [payload] \"r\" (payload),\n"
+		    "		      [resourcefs_registerfiles] \"i\" (XOS_Bit | ResourceFS_RegisterFiles)\n"
+		    "		    : \"r0\", \"r14\", \"cc\");\n"
 		    "  return err;\n"
 		    "}\n\n", regfunc);
 
@@ -401,29 +401,29 @@ generate(FILE *fh, bool verbose,
 		    "{\n"
 		    "  _kernel_oserror *err;\n"
 		    "\n"  
-		    "  asm volatile (\"MOV	r0, %%[payload];\\n\\t\"\n"
-		    "		\"SWI	%%[resourcefs_deregisterfiles];\\n\\t\"\n"
-		    "		\"MOVVS	%%[err], r0;\\n\\t\"\n"
-		    "		\"MOVVC	%%[err], #0;\\n\\t\"\n"
-		    "		: [err] \"=r\" (err)\n"
-		    "		: [payload] \"r\" (payload),\n"
-		    "		  [resourcefs_deregisterfiles] \"i\" (XOS_Bit | ResourceFS_DeregisterFiles)\n"
-		    "		: \"r0\", \"r14\", \"cc\");\n"
+		    "  __asm__ volatile (\"MOV	r0, %%[payload];\\n\\t\"\n"
+		    "		    \"SWI	%%[resourcefs_deregisterfiles];\\n\\t\"\n"
+		    "		    \"MOVVS	%%[err], r0;\\n\\t\"\n"
+		    "		    \"MOVVC	%%[err], #0;\\n\\t\"\n"
+		    "		    : [err] \"=r\" (err)\n"
+		    "		    : [payload] \"r\" (payload),\n"
+		    "		      [resourcefs_deregisterfiles] \"i\" (XOS_Bit | ResourceFS_DeregisterFiles)\n"
+		    "		    : \"r0\", \"r14\", \"cc\");\n"
 		    "  return err;\n"
 		    "}\n\n", deregfunc);
 
 	fprintf(fh, "void *\n"
 		    "%s (int callback, int workspace)\n"
 		    "{\n"
-		    "  asm volatile (\"MOV	r0, %%[payload];\\n\\t\"\n"
-		    "		\"MOV	r3, %%[workspace];\\n\\t\"\n"
-		    "		\"MOV	lr, pc;\\n\\t\"\n"
-		    "		\"MOV	pc, %%[callback];\\n\\t\"\n"
-		    "		:	/* no output */\n"
-		    "		: [payload] \"r\" (payload),\n"
-		    "		  [workspace] \"r\" (workspace),\n"
-		    "		  [callback] \"r\" (callback)\n"
-		    "		: \"r0\", \"r3\", \"lr\", \"cc\");\n"
+		    "  __asm__ volatile (\"MOV	r0, %%[payload];\\n\\t\"\n"
+		    "		    \"MOV	r3, %%[workspace];\\n\\t\"\n"
+		    "		    \"MOV	lr, pc;\\n\\t\"\n"
+		    "		    \"MOV	pc, %%[callback];\\n\\t\"\n"
+		    "		    :	/* no output */\n"
+		    "		    : [payload] \"r\" (payload),\n"
+		    "		      [workspace] \"r\" (workspace),\n"
+		    "		      [callback] \"r\" (callback)\n"
+		    "		    : \"r0\", \"r3\", \"lr\", \"cc\");\n"
 		    "}\n", reregfunc);
 
 	if (prototype != NULL) {
